
# Resource loaders
add_subdirectory(gloperate-qt-loaders)
#add_subdirectory(gloperate-assimp-loaders)
add_subdirectory(gloperate-text-loaders)

# Exporters
add_subdirectory(gloperate-ffmpeg-exporter)

# Pipelines and stages
#add_subdirectory(gloperate-osg-stages)

# Example pipelines
#add_subdirectory(gloperate-example-pipelines)
#add_subdirectory(gloperate-osg-pipelines)
